[tool.poetry]
name = "wiz-control"
version = "0.1.0"
description = "CLI tool to control Wiz smart lights"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
pywizlight = "^0.5.14"
asyncio-discover = "^0.1.3"

[tool.poetry.scripts]
cozylights = "wiz_control.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
