[tool.poetry]
name = "cozylights"
version = "0.1.0"
description = "CLI tool to control Wiz smart lights"
authors = ["Your Name"]
packages = [
    { include = "wiz_control" }
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
pywizlight = "^0.5.14"

[tool.poetry.scripts]
cozylights = "cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
